--- a/example-crown/ofxEmbreeExampleCrown.xcodeproj/xcshareddata/xcschemes/ofxSpineExample Debug.xcscheme
+++ b/example-crown/ofxEmbreeExampleCrown.xcodeproj/xcshareddata/xcschemes/ofxSpineExample Debug.xcscheme
@@ -14,7 +14,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "ofxEmbree-exampleCrown.temp_caseinsensitive_rename.app"
+               BuildableName = "ofxEmbreeExampleCrown.temp_caseinsensitive_rename.app"
                BlueprintName = "ofxEmbreeExampleCrown.temp_caseinsensitive_rename"
                ReferencedContainer = "container:ofxEmbreeExampleCrown.xcodeproj">
             </BuildableReference>
@@ -32,7 +32,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "ofxEmbree-exampleCrown.temp_caseinsensitive_rename.app"
+            BuildableName = "ofxEmbreeExampleCrown.temp_caseinsensitive_rename.app"
             BlueprintName = "ofxEmbreeExampleCrown.temp_caseinsensitive_rename"
             ReferencedContainer = "container:ofxEmbreeExampleCrown.xcodeproj">
          </BuildableReference>
@@ -51,7 +51,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "ofxEmbree-exampleCrown.temp_caseinsensitive_rename.app"
+            BuildableName = "ofxEmbreeExampleCrown.temp_caseinsensitive_rename.app"
             BlueprintName = "ofxEmbreeExampleCrown.temp_caseinsensitive_rename"
             ReferencedContainer = "container:ofxEmbreeExampleCrown.xcodeproj">
          </BuildableReference>
@@ -69,7 +69,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "ofxEmbree-exampleCrown.temp_caseinsensitive_rename.app"
+            BuildableName = "ofxEmbreeExampleCrown.temp_caseinsensitive_rename.app"
             BlueprintName = "ofxEmbreeExampleCrown.temp_caseinsensitive_rename"
             ReferencedContainer = "container:ofxEmbreeExampleCrown.xcodeproj">
          </BuildableReference>
