--- a/example-ofmesh/ofxEmbreeOFMesh.xcodeproj/xcshareddata/xcschemes/ofxSpineExample Release.xcscheme
+++ b/example-ofmesh/ofxEmbreeOFMesh.xcodeproj/xcshareddata/xcschemes/ofxSpineExample Release.xcscheme
@@ -14,9 +14,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "ofxEmbreeExample.app"
-               BlueprintName = "ofxEmbreeExample"
-               ReferencedContainer = "container:ofxEmbreeExample.xcodeproj">
+               BuildableName = "ofxEmbreeOFMesh.app"
+               BlueprintName = "ofxEmbreeOFMesh"
+               ReferencedContainer = "container:ofxEmbreeOFMesh.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,9 +32,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "ofxEmbreeExample.app"
-            BlueprintName = "ofxEmbreeExample"
-            ReferencedContainer = "container:ofxEmbreeExample.xcodeproj">
+            BuildableName = "ofxEmbreeOFMesh.app"
+            BlueprintName = "ofxEmbreeOFMesh"
+            ReferencedContainer = "container:ofxEmbreeOFMesh.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -51,9 +51,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "ofxEmbreeExample.app"
-            BlueprintName = "ofxEmbreeExample"
-            ReferencedContainer = "container:ofxEmbreeExample.xcodeproj">
+            BuildableName = "ofxEmbreeOFMesh.app"
+            BlueprintName = "ofxEmbreeOFMesh"
+            ReferencedContainer = "container:ofxEmbreeOFMesh.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -69,9 +69,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "ofxEmbreeExample.app"
-            BlueprintName = "ofxEmbreeExample"
-            ReferencedContainer = "container:ofxEmbreeExample.xcodeproj">
+            BuildableName = "ofxEmbreeOFMesh.app"
+            BlueprintName = "ofxEmbreeOFMesh"
+            ReferencedContainer = "container:ofxEmbreeOFMesh.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
